# admission-back-master

./: .env-example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  start.sh
app/: calculations.py  main.py  schemas.py  utils.py
data/: regions_map.json
